Fixed the mobile on modal width issue. Pretty much wrapped up the Auth portion. Login, Log out, recover\reset password, register user, 2FA, verify email. packaged a lot of reuasable code as components.

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,22 +1,2 @@
 
-
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
   
-  .modal {
-    background: rgb(49, 46, 44);
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-  }
-
